# csst-dfs-proto-py

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py
csst_dfs_proto/: run_codegen.py
csst_dfs_proto/auth/: auth_pb2.py  auth_pb2_grpc.py
csst_dfs_proto/common/: error_pb2.py
csst_dfs_proto/common/ephem/: ephem_pb2.py  ephem_pb2_grpc.py
csst_dfs_proto/common/fits_process/: fitsProcess_pb2.py  fitsProcess_pb2_grpc.py  fits_process_pb2.py  fits_process_pb2_grpc.py
csst_dfs_proto/common/misc/: misc_pb2.py  misc_pb2_grpc.py
csst_dfs_proto/cpic/level1/: level1_pb2.py  level1_pb2_grpc.py
csst_dfs_proto/cpic/level1prc/: level1prc_pb2.py  level1prc_pb2_grpc.py
csst_dfs_proto/facility/: detector_pb2.py  detector_pb2_grpc.py  exposure_pb2.py  exposure_pb2_grpc.py
csst_dfs_proto/facility/brick/: brick_pb2.py  brick_pb2_grpc.py
csst_dfs_proto/facility/calmerge/: calmerge_pb2.py  calmerge_pb2_grpc.py
csst_dfs_proto/facility/detector/: detector_pb2.py  detector_pb2_grpc.py
csst_dfs_proto/facility/level0/: level0_pb2.py  level0_pb2_grpc.py
csst_dfs_proto/facility/level0prc/: level0prc_pb2.py  level0prc_pb2_grpc.py
csst_dfs_proto/facility/level1/: level1_pb2.py  level1_pb2_grpc.py
csst_dfs_proto/facility/level1prc/: level1prc_pb2.py  level1prc_pb2_grpc.py
csst_dfs_proto/facility/level2/: level2_pb2.py  level2_pb2_grpc.py
csst_dfs_proto/facility/level2producer/: level2producer_pb2.py  level2producer_pb2_grpc.py
csst_dfs_proto/facility/level2type/: level2type_pb2.py  level2type_pb2_grpc.py
csst_dfs_proto/facility/otherdata/: otherdata_pb2.py  (+1 more)
(+58 files in other folders)
